# gridworks-ps

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  48h_day_ahead_forecast.py  README.md  alembic.ini  day_ahead_forecast.py  noxfile.py  postgres_views.md  pyproject.toml  sample_add_forecast.py  sample_price_load.py  seed_db.py
.github/workflows/: constraints.txt  release.yml  tests.yml
CodeGenerationTools/GridworksCore/: aicapture.json  clean.sh
alembic/: env.py
alembic/versions/: 0d06cb9c4fa1_pnode.py  1c745f2fae23_forecastmethod.py  2693593566d4_pricesql_has_value_instead_of_price.py  44f3c18207e8_pnodes_have_time_zones.py  684e7462e977_minor_tweaks.py  9a8eb65d238e_add_iso_id_to_p_node.py  9eeb1aa1a9f4_price.py  b4a248d88198_hourlypriceforecasts.py  b64886b92189_market.py  c444bd3cd979_add_iso_info_to_pnode.py  c7801567409a_latestprediction.py  e058ab8233a1_hourlypriceforecastchannel.py  f9118269f440_add_unique_constraint_for_forecasts.py
docs/: CODE_OF_CONDUCT.md  README.md  conf.py  index.md  reference.md  requirements.txt  usage.md
input_data/: atn_params_data.csv  dev_heat_profile_data.csv  dev_super_starter.json  ta_nft_data.csv
input_data/eventstore/: d1.isone.ct.newhaven.orange1-atn.params.report-1577851200000.json  d1.isone.ver.keene.apple-atn.params.report-1577851200000.json  d1.isone.ver.keene.beet-atn.params.report-1577851200000.json  d1.isone.ver.keene.holly-atn.params.report-1577851200000.json  d1.isone.ver.keene.juniper-atn.params.report-1577851200000.json  d1.isone.ver.keene.kale-atn.params.report-1577851200000.json  d1.isone.ver.keene.lettuce-atn.params.report-1577851200000.json  d1.isone.ver.keene.mushroom-atn.params.report-1577851200000.json  d1.isone.ver.keene.nettle-atn.params.report-1577851200000.json  d1.isone.ver.keene.orange-atn.params.report-1577851200000.json  d1.isone.ver.keene.pine-atn.params.report-1577851200000.json  d1.isone.ver.keene.quinoa-atn.params.report-1577851200000.json  d1.isone.ver.keene.rose-atn.params.report-1577851200000.json  d1.isone.ver.keene.thistle-atn.params.report-1577851200000.json  d1.isone.ver.keene.umbrella-atn.params.report-1577851200000.json  d1.isone.ver.keene.violet-atn.params.report-1577851200000.json  d1.isone.ver.keene.wasabi-atn.params.report-1577851200000.json  d1.isone.ver.keene.yarrow-atn.params.report-1577851200000.json  d1.isone.ver.keene.zinnia-atn.params.report-1577851200000.json
input_data/misc/: millinocket_boost_heat_profile_2020.csv  millinocket_heat_profile_2020.csv  (+1 more)
src/gwprice/: __init__.py  __main__.py  (+13 more)
tests/: __init__.py  test_main.py  test_price_source_files.py
(+144 files in other folders)
